# rust-bazel

./: .bazelrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  WORKSPACE  bazelrc  cargo-bazel-lock.json
crates/calculator/: BUILD.bazel  Cargo.toml
crates/mycalculator/: BUILD.bazel  Cargo.toml
crates/mycalculator/src/: lib.rs
crates/rust-bazel/: BUILD.bazel  Cargo.toml
crates/rust-bazel/src/: main.rs
crates/rustbazel/: BUILD.bazel  Cargo.toml
