[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "mycalculator"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mycalculator"
path = "src/lib.rs"

[dependencies]


